--- a/SmartEcoA/Resources/Controllers/SharedResources.en.resx
+++ b/SmartEcoA/Resources/Controllers/SharedResources.en.resx
@@ -129,6 +129,12 @@
   <data name="Date" xml:space="preserve">
     <value>Date</value>
   </data>
+  <data name="EndDate" xml:space="preserve">
+    <value>End Date</value>
+  </data>
+  <data name="StartDate" xml:space="preserve">
+    <value>Start Date</value>
+  </data>
   <data name="Time" xml:space="preserve">
     <value>Time</value>
   </data>
