--- a/SmartEcoA/Resources/Controllers/SharedResources.resx
+++ b/SmartEcoA/Resources/Controllers/SharedResources.resx
@@ -129,6 +129,12 @@
   <data name="Date" xml:space="preserve">
     <value />
   </data>
+  <data name="EndDate" xml:space="preserve">
+    <value />
+  </data>
+  <data name="StartDate" xml:space="preserve">
+    <value />
+  </data>
   <data name="Time" xml:space="preserve">
     <value />
   </data>
