--- a/SmartEcoA/Resources/Controllers/SharedResources.ru.resx
+++ b/SmartEcoA/Resources/Controllers/SharedResources.ru.resx
@@ -129,6 +129,12 @@
   <data name="Date" xml:space="preserve">
     <value>Дата</value>
   </data>
+  <data name="EndDate" xml:space="preserve">
+    <value>Конечная дата</value>
+  </data>
+  <data name="StartDate" xml:space="preserve">
+    <value>Начальная дата</value>
+  </data>
   <data name="Time" xml:space="preserve">
     <value>Время</value>
   </data>
