--- a/SmartEcoA/ClientApp/src/i18n/messages.xlf
+++ b/SmartEcoA/ClientApp/src/i18n/messages.xlf
@@ -1121,7 +1121,7 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/reports/createcarpostdataautotestprotocol.component.html</context>
-          <context context-type="linenumber">46</context>
+          <context context-type="linenumber">53</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/reports/createcarpostdatasmokemeterprotocol.component.html</context>
@@ -1237,11 +1237,11 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/carmodelautotests/create.component.html</context>
-          <context context-type="linenumber">109</context>
+          <context context-type="linenumber">112</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/carmodelautotests/edit.component.html</context>
-          <context context-type="linenumber">109</context>
+          <context context-type="linenumber">112</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/carpostdataautotests/delete.component.html</context>
@@ -1253,7 +1253,7 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/carpostdataautotests/edit.component.html</context>
-          <context context-type="linenumber">173</context>
+          <context context-type="linenumber">177</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/typeecoclasses/delete.component.html</context>
@@ -1624,7 +1624,7 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/typeecoclasses/details.component.html</context>
-          <context context-type="linenumber">51</context>
+          <context context-type="linenumber">49</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/testers/details.component.html</context>
@@ -1686,11 +1686,11 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/carmodelautotests/edit.component.html</context>
-          <context context-type="linenumber">108</context>
+          <context context-type="linenumber">111</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/carpostdataautotests/edit.component.html</context>
-          <context context-type="linenumber">172</context>
+          <context context-type="linenumber">176</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/typeecoclasses/edit.component.html</context>
@@ -3077,7 +3077,7 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/reports/createcarpostdataautotestprotocol.component.html</context>
-          <context context-type="linenumber">45</context>
+          <context context-type="linenumber">52</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/reports/createcarpostdatasmokemeterprotocol.component.html</context>
@@ -3161,7 +3161,7 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/carmodelautotests/create.component.html</context>
-          <context context-type="linenumber">108</context>
+          <context context-type="linenumber">111</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/carpostdataautotests/list.component.html</context>
@@ -3641,6 +3641,13 @@
         <context-group purpose="location">
           <context context-type="sourcefile">app/reports/createcarpostdataautotestprotocol.component.html</context>
           <context context-type="linenumber">39</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="TypeReport" datatype="html">
+        <source>Type Report</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/reports/createcarpostdataautotestprotocol.component.html</context>
+          <context context-type="linenumber">42</context>
         </context-group>
       </trans-unit>
       <trans-unit id="CarPostDataSmokeMeterRequired" datatype="html">
@@ -5298,7 +5305,7 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/typeecoclasses/details.component.html</context>
-          <context context-type="linenumber">24</context>
+          <context context-type="linenumber">22</context>
         </context-group>
       </trans-unit>
       <trans-unit id="DEL_MIN" datatype="html">
@@ -5341,7 +5348,7 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/typeecoclasses/details.component.html</context>
-          <context context-type="linenumber">26</context>
+          <context context-type="linenumber">24</context>
         </context-group>
       </trans-unit>
       <trans-unit id="MAX_TAH" datatype="html">
@@ -5396,7 +5403,7 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/typeecoclasses/details.component.html</context>
-          <context context-type="linenumber">28</context>
+          <context context-type="linenumber">26</context>
         </context-group>
       </trans-unit>
       <trans-unit id="DEL_MAX" datatype="html">
@@ -5439,7 +5446,7 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/typeecoclasses/details.component.html</context>
-          <context context-type="linenumber">30</context>
+          <context context-type="linenumber">28</context>
         </context-group>
       </trans-unit>
       <trans-unit id="MIN_CO" datatype="html">
@@ -5494,7 +5501,7 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/typeecoclasses/details.component.html</context>
-          <context context-type="linenumber">32</context>
+          <context context-type="linenumber">30</context>
         </context-group>
       </trans-unit>
       <trans-unit id="MAX_CO" datatype="html">
@@ -5549,7 +5556,7 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/typeecoclasses/details.component.html</context>
-          <context context-type="linenumber">34</context>
+          <context context-type="linenumber">32</context>
         </context-group>
       </trans-unit>
       <trans-unit id="MIN_CH" datatype="html">
@@ -5604,7 +5611,7 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/typeecoclasses/details.component.html</context>
-          <context context-type="linenumber">36</context>
+          <context context-type="linenumber">34</context>
         </context-group>
       </trans-unit>
       <trans-unit id="MAX_CH" datatype="html">
@@ -5659,7 +5666,7 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/typeecoclasses/details.component.html</context>
-          <context context-type="linenumber">38</context>
+          <context context-type="linenumber">36</context>
         </context-group>
       </trans-unit>
       <trans-unit id="L_MIN" datatype="html">
@@ -5702,7 +5709,7 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/typeecoclasses/details.component.html</context>
-          <context context-type="linenumber">40</context>
+          <context context-type="linenumber">38</context>
         </context-group>
       </trans-unit>
       <trans-unit id="L_MAX" datatype="html">
@@ -5745,7 +5752,7 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/typeecoclasses/details.component.html</context>
-          <context context-type="linenumber">42</context>
+          <context context-type="linenumber">40</context>
         </context-group>
       </trans-unit>
       <trans-unit id="K_SVOB" datatype="html">
@@ -5800,7 +5807,7 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/typeecoclasses/details.component.html</context>
-          <context context-type="linenumber">44</context>
+          <context context-type="linenumber">42</context>
         </context-group>
       </trans-unit>
       <trans-unit id="K_MAX" datatype="html">
@@ -5855,7 +5862,7 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/typeecoclasses/details.component.html</context>
-          <context context-type="linenumber">46</context>
+          <context context-type="linenumber">44</context>
         </context-group>
       </trans-unit>
       <trans-unit id="EditCarModelAutoTest" datatype="html">
@@ -6199,7 +6206,7 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/carpostdataautotests/edit.component.html</context>
-          <context context-type="linenumber">159</context>
+          <context context-type="linenumber">161</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/carpostdataautotests/details.component.html</context>
@@ -6214,7 +6221,7 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/carpostdataautotests/edit.component.html</context>
-          <context context-type="linenumber">167</context>
+          <context context-type="linenumber">171</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">app/carpostdataautotests/details.component.html</context>
@@ -6243,28 +6250,6 @@
           <context context-type="linenumber">11</context>
         </context-group>
       </trans-unit>
-      <trans-unit id="GasCheckDate" datatype="html">
-        <source>Gas analyzer: date of inspection</source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/carpostdataautotests/edit.component.html</context>
-          <context context-type="linenumber">155</context>
-        </context-group>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/carpostdataautotests/details.component.html</context>
-          <context context-type="linenumber">77</context>
-        </context-group>
-      </trans-unit>
-      <trans-unit id="MeteoCheckDate" datatype="html">
-        <source>Meteoscope: check date</source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/carpostdataautotests/edit.component.html</context>
-          <context context-type="linenumber">163</context>
-        </context-group>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/carpostdataautotests/details.component.html</context>
-          <context context-type="linenumber">81</context>
-        </context-group>
-      </trans-unit>
       <trans-unit id="CarPostDataAutoTestDetails" datatype="html">
         <source>Car Post Data details (Auto Test)</source>
         <context-group purpose="location">
@@ -6274,6 +6259,20 @@
         <context-group purpose="location">
           <context context-type="sourcefile">app/carpostdataautotests/details.component.html</context>
           <context context-type="linenumber">11</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="GasCheckDate" datatype="html">
+        <source>Gas Check Date</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostdataautotests/details.component.html</context>
+          <context context-type="linenumber">77</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="MeteoCheckDate" datatype="html">
+        <source>Meteo Check Date</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/carpostdataautotests/details.component.html</context>
+          <context context-type="linenumber">81</context>
         </context-group>
       </trans-unit>
       <trans-unit id="CreateNewTypeEcoClass" datatype="html">
@@ -6307,13 +6306,6 @@
         <context-group purpose="location">
           <context context-type="sourcefile">app/typeecoclasses/details.component.html</context>
           <context context-type="linenumber">11</context>
-        </context-group>
-      </trans-unit>
-      <trans-unit id="Version" datatype="html">
-        <source>Version</source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/typeecoclasses/details.component.html</context>
-          <context context-type="linenumber">22</context>
         </context-group>
       </trans-unit>
       <trans-unit id="CreateNewTester" datatype="html">
