--- a/CarPostClient/Form1.resx
+++ b/CarPostClient/Form1.resx
@@ -57,4 +57,31 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="notifyIconWork.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="notifyIconWork.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEAIAAoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAACFAP8AhQD/AIUA/wCFAP8AAAAAAAAAAAAAAAAAAAAAAAAAAACFAP8AhQD/AAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAhQD/AIUA/wCFAP8AhQD/AAAAAAAAAAAAAAAAAAAAAACFAP8AhQD/AIUA/wCF
+        AP8AAAAAAAAAAAAAAAAAAAAAAIUA/wCFAP8AhQD/AIUA/wAAAAAAAAAAAAAAAACFAP8AhQD/AIUA/wCF
+        AP8AhQD/AIUA/wAAAAAAAAAAAAAAAACFAP8AhQD/AIUA/wCFAP8AAAAAAAAAAACFAP8AhQD/AIUA/wCF
+        AP8AhQD/AIUA/wCFAP8AhQD/AAAAAAAAAAAAhQD/AIUA/wCFAP8AhQD/AAAAAAAAAAAAAAAAAAAAAACF
+        AP8AhQD/AIUA/wCFAP8AAAAAAAAAAAAAAAAAAAAAAIUA/wCFAP8AhQD/AIUA/wAAAAAAAAAAAAAAAAAA
+        AAAAhQD/AIUA/wCFAP8AhQD/AAAAAAAAAAAAAAAAAAAAAACFAP8AhQD/AIUA/wCFAP8AAAAAAAAAAAAA
+        AAAAAAAAAIUA/wCFAP8AhQD/AIUA/wAAAAAAAAAAAAAAAAAAAAAAhQD/AIUA/wCFAP8AhQD/AAAAAAAA
+        AAAAAAAAAAAAAACFAP8AhQD/AIUA/wCFAP8AAAAAAAAAAAAAAAAAAAAAAIUA/wCFAP8AhQD/AIUA/wAA
+        AAAAAAAAAAAAAAAAAAAAhQD/AIUA/wCFAP8AhQD/AAAAAAAAAAAAAAAAAAAAAACFAP8AhQD/AIUA/wCF
+        AP8AAAAAAAAAAAAAAAAAAAAAAIUA/wCFAP8AhQD/AIUA/wAAAAAAAAAAAAAAAAAAAAAAhQD/AIUA/wCF
+        AP8AhQD/AAAAAAAAAAAAAAAAAAAAAACFAP8AhQD/AIUA/wCFAP8AAAAAAAAAAAAAAAAAAAAAAIUA/wCF
+        AP8AhQD/AIUA/wAAAAAAAAAAAAAAAAAAAAAAhQD/AIUA/wCFAP8AhQD/AAAAAAAAAAAAhQD/AIUA/wCF
+        AP8AhQD/AIUA/wCFAP8AhQD/AIUA/wAAAAAAAAAAAIUA/wCFAP8AhQD/AIUA/wAAAAAAAAAAAAAAAACF
+        AP8AhQD/AIUA/wCFAP8AhQD/AIUA/wAAAAAAAAAAAAAAAACFAP8AhQD/AIUA/wCFAP8AAAAAAAAAAAAA
+        AAAAAAAAAIUA/wCFAP8AhQD/AIUA/wAAAAAAAAAAAAAAAAAAAAAAhQD/AIUA/wCFAP8AhQD/AAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAhQD/AIUA/wAAAAAAAAAAAAAAAAAAAAAAAAAAAIUA/wCFAP8AhQD/AIUA/wAA
+        AAAAAAAA
+</value>
+  </data>
 </root>
