--- a/CarPostClient/Form1.resx
+++ b/CarPostClient/Form1.resx
@@ -84,4 +84,7 @@
         AAAAAAAA
 </value>
   </data>
+  <metadata name="backgroundWorkerMain.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>152, 17</value>
+  </metadata>
 </root>
