--- a/CarPostClient/Form1.resx
+++ b/CarPostClient/Form1.resx
@@ -87,4 +87,27 @@
   <metadata name="backgroundWorkerMain.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>152, 17</value>
   </metadata>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEAIAAoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAACFAP8AhQD/AIUA/wCFAP8AAAAAAAAAAAAAAAAAAAAAAAAAAACFAP8AhQD/AAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAhQD/AIUA/wCFAP8AhQD/AAAAAAAAAAAAAAAAAAAAAACFAP8AhQD/AIUA/wCF
+        AP8AAAAAAAAAAAAAAAAAAAAAAIUA/wCFAP8AhQD/AIUA/wAAAAAAAAAAAAAAAACFAP8AhQD/AIUA/wCF
+        AP8AhQD/AIUA/wAAAAAAAAAAAAAAAACFAP8AhQD/AIUA/wCFAP8AAAAAAAAAAACFAP8AhQD/AIUA/wCF
+        AP8AhQD/AIUA/wCFAP8AhQD/AAAAAAAAAAAAhQD/AIUA/wCFAP8AhQD/AAAAAAAAAAAAAAAAAAAAAACF
+        AP8AhQD/AIUA/wCFAP8AAAAAAAAAAAAAAAAAAAAAAIUA/wCFAP8AhQD/AIUA/wAAAAAAAAAAAAAAAAAA
+        AAAAhQD/AIUA/wCFAP8AhQD/AAAAAAAAAAAAAAAAAAAAAACFAP8AhQD/AIUA/wCFAP8AAAAAAAAAAAAA
+        AAAAAAAAAIUA/wCFAP8AhQD/AIUA/wAAAAAAAAAAAAAAAAAAAAAAhQD/AIUA/wCFAP8AhQD/AAAAAAAA
+        AAAAAAAAAAAAAACFAP8AhQD/AIUA/wCFAP8AAAAAAAAAAAAAAAAAAAAAAIUA/wCFAP8AhQD/AIUA/wAA
+        AAAAAAAAAAAAAAAAAAAAhQD/AIUA/wCFAP8AhQD/AAAAAAAAAAAAAAAAAAAAAACFAP8AhQD/AIUA/wCF
+        AP8AAAAAAAAAAAAAAAAAAAAAAIUA/wCFAP8AhQD/AIUA/wAAAAAAAAAAAAAAAAAAAAAAhQD/AIUA/wCF
+        AP8AhQD/AAAAAAAAAAAAAAAAAAAAAACFAP8AhQD/AIUA/wCFAP8AAAAAAAAAAAAAAAAAAAAAAIUA/wCF
+        AP8AhQD/AIUA/wAAAAAAAAAAAAAAAAAAAAAAhQD/AIUA/wCFAP8AhQD/AAAAAAAAAAAAhQD/AIUA/wCF
+        AP8AhQD/AIUA/wCFAP8AhQD/AIUA/wAAAAAAAAAAAIUA/wCFAP8AhQD/AIUA/wAAAAAAAAAAAAAAAACF
+        AP8AhQD/AIUA/wCFAP8AhQD/AIUA/wAAAAAAAAAAAAAAAACFAP8AhQD/AIUA/wCFAP8AAAAAAAAAAAAA
+        AAAAAAAAAIUA/wCFAP8AhQD/AIUA/wAAAAAAAAAAAAAAAAAAAAAAhQD/AIUA/wCFAP8AhQD/AAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAhQD/AIUA/wAAAAAAAAAAAAAAAAAAAAAAAAAAAIUA/wCFAP8AhQD/AIUA/wAA
+        AAAAAAAA
+</value>
+  </data>
 </root>
