--- a/CarPostClientUpdater/Form1.resx
+++ b/CarPostClientUpdater/Form1.resx
@@ -84,4 +84,7 @@
         AAAAAAAA
 </value>
   </data>
+  <metadata name="notifyIcon1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>163, 17</value>
+  </metadata>
 </root>
